Allow user to stop query, if it takes too long.

--- a/apps/github-search/src/app/search/components/search-page/search-page.component.css
+++ b/apps/github-search/src/app/search/components/search-page/search-page.component.css
@@ -29,3 +29,7 @@
   grid-area: errors;
   padding: 1rem;
 }
+
+.search-button {
+  width: 5rem;
+}
